Bug 1796281 - Fix -Wint-to-void-pointer-cast warnings. r=nss-reviewers,jschanck

Differential Revision: https://phabricator.services.mozilla.com/D159772

--HG--
extra : moz-landing-system : lando